terraform/rds/rds_security.tf
resource "aws_security_group" "this" {
  name        = local.name
  description = local.name

  # vpc_id = aws_vpc.main.id
  vpc_id = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  tags = {
    Name = "${local.name}"
  }
}
